k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartbank
  namespace: smartbank
  labels:
    app.kubernetes.io/name: smartbank
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/app-root: /swagger-ui.html
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-smartbank.next-step-go.online
      secretName: smartbank-tls
  rules:
    - host: api-smartbank.next-step-go.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  name: http
